src/elf.ebnf
HttpFile ::= HttpVerb Multipart? Url Details?
Details ::= ( (DataInput Headers?) | (Headers DataInput?) )
DataInput ::= (Json | Varjson)
HttpVerb ::= "GET" | "HEAD" | "POST" | "PUT" | "DELETE" | "CONNECT" | "OPTIONS" | "TRACE" | "PATCH"
Multipart ::= "MULTIPART"
Varjson ::= (StringType "=" StringType)+
Headers ::= (StringType ":" StringType)
Url ::= "http" "s"? ":://" Unquoted+
Json ::= AnyType
AnyType ::= ComplexType | PrimitiveType
ComplexType ::= List | Map
List ::= "[" (AnyType ",")* AnyType? "]"
Map ::= "{" (Pair ",")* Pair? "}"
Pair ::= (QuotedString | UnquotedString) ":" AnyType
PrimitiveType ::= Null | Boolean | StringType
StringType ::= QuotedString | Unquoted
